third_party/move/move-compiler-v2/transactional-tests/tests/signed-int/rem_min_edge_cases.no-optimize.exp
processed 21 tasks
task 0 lines 1-27:  publish [module 0xff::rem_min {]
task 1 lines 29-47:  publish [module 0xff::const_rem_neg1 {]
Error: compilation errors:
 error: Invalid expression in `const`. Operator `%` result value out of range for `i8`
   ┌─ TEMPFILE1:31:26
   │
31 │     const C_I8:   i8   = -128i8 % -1i8;
   │                          ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i16`
   ┌─ TEMPFILE1:32:26
   │
32 │     const C_I16:  i16  = -32768i16 % -1i16;
   │                          ^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i32`
   ┌─ TEMPFILE1:33:26
   │
33 │     const C_I32:  i32  = -2147483648i32 % -1i32;
   │                          ^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i64`
   ┌─ TEMPFILE1:34:26
   │
34 │     const C_I64:  i64  = -9223372036854775808i64 % -1i64;
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i128`
   ┌─ TEMPFILE1:36:9
   │
36 │         -170141183460469231731687303715884105728i128 % -1i128;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i256`
   ┌─ TEMPFILE1:38:9
   │  
38 │ ╭         -57896044618658097711785492504343953926634992332820282019728792003956564819968i256
39 │ │             % -1i256;
   │ ╰────────────────────^


task 2 lines 49-67:  publish [module 0xff::const_rem_0 {]
Error: compilation errors:
 error: Invalid expression in `const`. Operator `%` result value out of range for `i8`
   ┌─ TEMPFILE2:51:26
   │
51 │     const C_I8:   i8   = -128i8 % 0i8;
   │                          ^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i16`
   ┌─ TEMPFILE2:52:26
   │
52 │     const C_I16:  i16  = -32768i16 % 0i16;
   │                          ^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i32`
   ┌─ TEMPFILE2:53:26
   │
53 │     const C_I32:  i32  = -2147483648i32 % 0i32;
   │                          ^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i64`
   ┌─ TEMPFILE2:54:26
   │
54 │     const C_I64:  i64  = -9223372036854775808i64 % 0i64;
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i128`
   ┌─ TEMPFILE2:56:9
   │
56 │         -170141183460469231731687303715884105728i128 % 0i128;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator `%` result value out of range for `i256`
   ┌─ TEMPFILE2:58:9
   │  
58 │ ╭         -57896044618658097711785492504343953926634992332820282019728792003956564819968i256
59 │ │             % 0i256;
   │ ╰───────────────────^


task 3 lines 69-74:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 4 lines 76-81:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 5 lines 83-88:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 6 lines 90-95:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 7 lines 97-105:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 8 lines 107-116:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 9 lines 119-124:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 10 lines 126-131:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 11 lines 133-138:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 12 lines 140-145:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 13 lines 147-152:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 14 lines 154-160:  run --verbose [script {]
Error: Script execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 15 lines 163-163:  run 0xff::rem_min::min_i8_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(16), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 16 lines 165-165:  run 0xff::rem_min::min_i16_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(4), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 17 lines 167-167:  run 0xff::rem_min::min_i32_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(10), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 18 lines 169-169:  run 0xff::rem_min::min_i64_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(13), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 19 lines 171-171:  run 0xff::rem_min::min_i128_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(1), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
task 20 lines 173-173:  run 0xff::rem_min::min_i256_rem_0 --verbose
Error: Function execution failed with VMError: {
    message: Integer remainder by zero,
    major_status: ARITHMETIC_ERROR,
    sub_status: None,
    location: 0xff::rem_min,
    indices: [],
    offsets: [(FunctionDefinitionIndex(7), 2)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
